--- a/Runtime.Rpi5/Configuration/Tools.props
+++ b/Runtime.Rpi5/Configuration/Tools.props
@@ -3,9 +3,10 @@
 
   <PropertyGroup>
     <CompilerName>aarch64-none-elf</CompilerName>
-    <CompilerPath>$(HomePath)gcc\arm-gnu-toolchain-14.3.rel1-mingw-w64-i686-aarch64-none-elf\</CompilerPath>
-    <CompilerPrefix>aarch64-none-elf-</CompilerPrefix>
     <CompilerVersion>14.3.1</CompilerVersion>
+    <CompilerTag>14.3.rel1</CompilerTag>
+    <CompilerPrefix>aarch64-none-elf-</CompilerPrefix>
+    <CompilerPath>$(HomePath)gcc\arm-gnu-toolchain-$(CompilerTag)-mingw-w64-i686-$(CompilerName)\</CompilerPath>
   </PropertyGroup>
 
   <PropertyGroup>
