--- a/Runtime.Rpi5/Configuration/Tools.targets
+++ b/Runtime.Rpi5/Configuration/Tools.targets
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
+  <Target Name="DownloadFirmware" Condition="!Exists('$(FirmwarePath)')" BeforeTargets="Build">
+    <Message Text="Downloading Firmware..." Importance="High" />
+    <DownloadFile SourceUrl="https://github.com/raspberrypi/firmware/raw/refs/heads/master/boot/bcm2712-rpi-5-b.dtb" DestinationFolder="$(SolutionDir)Firmware" />
+  </Target>
+
   <Target Name="CreateConfig" AfterTargets="Build">
     <ItemGroup>
       <ConfigLines Include="enable_jtag_gpio=1" />
