--- a/Runtime.Rpi5/Runtime.Rpi5.vcxitems.filters
+++ b/Runtime.Rpi5/Runtime.Rpi5.vcxitems.filters
@@ -20,6 +20,15 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Gpio\GpioHelper.cpp">
       <Filter>Devices\Gpio</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Emmc\EmmcHost.cpp">
+      <Filter>Devices\Emmc</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Storage\FlashMemory.cpp">
+      <Filter>Storage</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Wifi\WifiAdapter.cpp">
+      <Filter>Devices\Wifi</Filter>
+    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Pcie\PcieHost.cpp">
       <Filter>Devices\Pcie</Filter>
     </ClCompile>
@@ -33,6 +42,15 @@
       <Filter>Devices\System</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)UnwindException.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)Network\Wifi\WifiStation.cpp">
+      <Filter>Network\Wifi</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Wifi\WifiPacket.cpp">
+      <Filter>Devices\Wifi</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Dma\DmaChannel.cpp">
+      <Filter>Devices\Dma</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)IntelliSense.h" />
@@ -57,8 +75,20 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)irq.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)cpu.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)base.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)Storage\FlashMemory.h">
+      <Filter>Storage</Filter>
+    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Gpio\GpioHelper.h">
       <Filter>Devices\Gpio</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Emmc\EmmcHost.h">
+      <Filter>Devices\Emmc</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Emmc\Emmc.h">
+      <Filter>Devices\Emmc</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Wifi\WifiAdapter.h">
+      <Filter>Devices\Wifi</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Devices\System\Soc.h">
       <Filter>Devices\System</Filter>
@@ -80,6 +110,18 @@
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Platform.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)UnwindException.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Wifi\WifiPacket.h">
+      <Filter>Devices\Wifi</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Wifi\Wifi.h">
+      <Filter>Devices\Wifi</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Network\Wifi\WifiStation.h">
+      <Filter>Network\Wifi</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Dma\DmaChannel.h">
+      <Filter>Devices\Dma</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Configuration">
@@ -94,14 +136,32 @@
     <Filter Include="Devices\Timers">
       <UniqueIdentifier>{139bd0a9-020c-4e62-a3a5-3c1279770a5d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Storage">
+      <UniqueIdentifier>{3114767f-77b5-4f19-81ee-1033bdc7847d}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Devices\Gpio">
       <UniqueIdentifier>{605f50fa-4556-45f8-bc01-9b5daa298ea6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Devices\Emmc">
+      <UniqueIdentifier>{dce6942c-2dda-4212-abaa-7f6da8ab54e9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Devices\Wifi">
+      <UniqueIdentifier>{e23294cb-0eda-48b8-80e5-aac268cb9757}</UniqueIdentifier>
     </Filter>
     <Filter Include="Devices\Pcie">
       <UniqueIdentifier>{c571a4a4-e467-44c5-8a28-2469e2ec1257}</UniqueIdentifier>
     </Filter>
     <Filter Include="Devices\Serial">
       <UniqueIdentifier>{870ee661-e3a2-49ea-91ff-ea7a7e88ec14}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Network">
+      <UniqueIdentifier>{d31dee22-6dd9-4357-8563-de4a30d1130e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Network\Wifi">
+      <UniqueIdentifier>{8e9b5f5d-7f08-4dff-9388-8a7c00d3de4a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Devices\Dma">
+      <UniqueIdentifier>{64496161-c42a-4843-afae-d7d36712a9f1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -127,5 +187,8 @@
       <Filter>Configuration</Filter>
     </None>
     <None Include="$(MSBuildThisFileDirectory)mmu.S" />
+    <None Include="$(MSBuildThisFileDirectory)Devices\Wifi\firmware.S">
+      <Filter>Devices\Wifi</Filter>
+    </None>
   </ItemGroup>
 </Project>
